@@ -1,3 +1,8 @@
+2022-12-29 Franz Holzinger  <franz@ttproducts.de>
+
+    * bugfix in ConstantConfigurationParser
+    * only PHP 8 is supported
+
 2022-11-28 Franz Holzinger  <franz@ttproducts.de>
 
     * bugfix TYPO3 11.5
